hard-gists/efabc30c4b2c9afd8a83/run.log
=== Docker Run Log for efabc30c4b2c9afd8a83 ===
Started at: Mi 29. Okt 21:14:58 CET 2025

[2025-10-29 21:14:58] START: Running container for efabc30c4b2c9afd8a83
[2025-10-29 21:14:59] SUCCESS: Container 764ab20beea481b6f5ccc2b8687a85f52d79409c4fb9b8f4d806c7f6acb569e1 started for efabc30c4b2c9afd8a83
=== Container logs for efabc30c4b2c9afd8a83 ===
  File "/snippet.py", line 25
    print i+1, conv
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for efabc30c4b2c9afd8a83 ===
[2025-10-29 21:15:01] INFO: Container 764ab20beea481b6f5ccc2b8687a85f52d79409c4fb9b8f4d806c7f6acb569e1 has stopped
